force-app/main/default/objects/Product2/fields/HTML_Color_Code__c.field-meta.xml
<CustomField>
    <fullName>HTML_Color_Code__c</fullName>
    <formula>CASE(Color__c 

,&apos;Blue&apos; 
,&apos;#0000FF&apos; 

,&apos;Green&apos; 
,&apos;#008000&apos; 

,&apos;Lavender&apos; 
,&apos;#E6E6FA&apos; 

,&apos;Orange&apos; 
,&apos;#FFA500&apos; 

,&apos;Pink&apos; 
,&apos;#FFC0CB&apos; 

,&apos;Purple&apos; 
,&apos;#800080&apos; 

,&apos;Red&apos; 
,&apos;#FF0000&apos; 

,&apos;Yellow&apos; 
,&apos;#FFFF00&apos; 

,&apos;White&apos; 
,&apos;#FFFFFF&apos; 

,&apos;#000000&apos; 

)</formula>
    <label>HTML Color Code</label>
    <type>Text</type>
</CustomField>