force-app/main/default/objects/Product2/fields/Inventory_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Remaining__c</fullName>
    <formula>Initial_Inventory__c - Inventory_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>