force-app/main/default/objects/Product2/fields/Inventory_Used__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Used__c</fullName>
    <label>Inventory Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>