force-app/main/default/objects/Product2/validationRules/Negative_Inventory_Remaining.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Inventory_Remaining</fullName>
    <active>true</active>
    <errorConditionFormula>Inventory_Remaining__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Inventory_Used__c</errorDisplayField>
    <errorMessage>You may not use more Inventory than is Remaining</errorMessage>
</ValidationRule>